# world-gen

./: .gitignore  CLAUDE.md  Cargo.toml  DEBUG_API_MVP_PLAN.md  README.md  herbarium.json
.cargo/: config.toml
.claude/: settings.local.json
.claude/commands/: release.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
assets/icon/: world-gen.icns
assets/models/: fern.glb  house.glb  tree.glb
docs/: DEBUG_API_V1.md  DEBUG_API_V2.md  PERFORMANCE.md  plant-lifecycle-design.md  ui-accessibility-spec.md
scripts/: capture_world.sh  capture_world_loop.sh
src/: app.rs  lib.rs  main.rs
src/app/: debug_commands.rs  event_loop.rs  mod.rs  plant_editor.rs  screenshot.rs
src/debug_api/: config.rs  mod.rs  server.rs  types.rs
src/renderer/: instanced.rs  mod.rs  pipeline.rs  sky.rs  terrain.rs
src/renderer_wgpu/: asset_watcher.rs  blur_pass.rs  camera.rs  egui_bridge.rs  egui_pass.rs  frustum.rs  geometry.rs  gpu_context.rs  hud_font.rs  hud_pass.rs  instanced_pass.rs  instancing.rs  material.rs  mesh.rs  minimap_colors.rs  minimap_pass.rs  mod.rs  model_loader.rs  pipeline.rs  sky.rs  sky_pass.rs  terrain.rs  terrain_compute.rs  terrain_pass.rs  terrain_texture.rs  thumbnail.rs  water_pass.rs  world.rs
src/ui/: config_panel.rs  herbarium_ui.rs  mod.rs  plant_editor_panel.rs  start_menu.rs  theme.rs  ui_registry.rs
src/world/: mod.rs  streaming.rs  time.rs
src/world_core/: biome.rs  biome_map.rs  chunk.rs  chunk_generator.rs  color.rs  config.rs  heightmap.rs  herbarium.rs  layer.rs  lifecycle.rs  mod.rs  par.rs  save.rs  storage.rs  terrain.rs  time.rs
src/world_gen/: biome.rs  chunk.rs  mod.rs  vegetation.rs
src/world_runtime/: mod.rs  (+3 more)
tools/: bundle-macos.sh  cdp-wasm-test.ts  generate_icon.py
web/: CNAME  index.html
(+45 files in other folders)
