[package]
name = "world-gen"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["ws"] }
bytemuck = { version = "1.16", features = ["derive"] }
env_logger = "0.11"
futures-util = "0.3"
glam = "0.27"
log = "0.4"
noise = "0.9"
pollster = "0.3"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tower-http = { version = "0.6", features = ["cors"] }
wgpu = "0.19"
winit = "0.29"
