[package]
name = "world-gen"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.16", features = ["derive"] }
gltf = "1"
glam = "0.27"
log = "0.4"
noise = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wgpu = "23"
winit = "0.29"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = { version = "0.7", features = ["ws"] }
notify = "7"
env_logger = "0.11"
futures-util = "0.3"
image = { version = "0.25", default-features = false, features = ["png"] }
pollster = "0.3"
rayon = "1.10"
tokio = { version = "1.38", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tower-http = { version = "0.6", features = ["cors"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
] }
web-time = "1"
